# xdfgui

./: .gitignore  Dockerfile  README.md  copilot-instructions.md  gui.py  install_launcher.sh  pyproject.toml  requirements.txt  setup.py  uv-setup.sh  xdfgui.command  xdfgui.spec
.github/workflows/: release.yml
tests/: test_lha_split.py  test_parse_list_output_realworld.py  test_xdftool_wrapper.py
xdfgui/: __init__.py  cli.py  gui.py  lha_split.py  xdftool_wrapper.py
