[project]
name = "xdfgui"
version = "0.1.0"
description = "Simple GUI wrapper for xdftool (amitools)"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]
build = ["pyinstaller"]
runtime = ["amitools", "lhafile", "pyobjc-framework-Cocoa; sys_platform == 'darwin'", "setproctitle; sys_platform == 'darwin'"]

[project.scripts]
xdfgui = "xdfgui.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
